--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "firebase": "^12.9.0",
     "nuxt": "^4.2.1",
+    "nuxt-vuefire": "^1.1.0",
     "sass": "^1.97.3",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3",
+    "vuefire": "^3.2.2",
     "vuetify-nuxt-module": "^0.19.3"
   },
   "devDependencies": {
